--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,5 +5,6 @@
         <p>
                 <a href="/">Home</a>
                 <a href="/about">About</a>
+                <a href="/projects">Projects</a>
         </p>
 </head>
